--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -24,3 +24,9 @@
     dest: /user/share/nginx/html
     remote_src: yes
 
+- name: Start Nginx
+  ansible.builtin.systemd:
+    satus: restarted
+    name: Nginx
+    enabled: true
+
