--- a/roles/catalogue/common/tasks/nodejs.yml
+++ b/roles/catalogue/common/tasks/nodejs.yml
@@ -12,4 +12,9 @@
 
 - name: Install NodeJS dependencies
   ansible:builtin:shell: npm install
-  args: /app
+  args:
+  chdir: /app
+
+- name: include schema setup
+  ansible.builtin.import_tasks:
+    file: schema_setup.yml
