--- a/roles/catalogue/common/tasks/schema_setup.yml
+++ b/roles/catalogue/common/tasks/schema_setup.yml
@@ -1,15 +1,16 @@
-- name: Copy MongoDB repo file
-  ansible.builtin.copy:
-    src: mongo.repo
-    dest: /etc/yum.repos.d/mongo.repo
+-name: Load MongoDB Schema
   when: schema_setup == "mongo"
+  block:
+     - name: Copy MongoDB repo file
+       ansible.builtin.copy:
+         src: mongo.repo
+         dest: /etc/yum.repos.d/mongo.repo
+     - name: Install MongoDB clint
+       ansible.builtin.yum:
+         name: mongodb-org-shell
+         state: installed
 
-- name: Install MongoDB clint
-  ansible.builtin.yum:
-    name: mongodb-org-shell
-    state: installed
-  when: schema_setup == "mongo"
+     - name: Load Schema
+       ansible.builtin.shell: mongo --host {{ lookup('aws_ssm', 'catalogue.mongo_endpoint', region='us-east-1' ) }} </app/schema/{{component}}.js
 
-- name: Load Schema
-  ansible.builtin.shell: mongo --host {{ lookup('aws_ssm', 'catalogue.mongo_endpoint', region='us-east-1' ) }} </app/schema/{{component}}.js
-  when: schema_setup == "mongo"
+
