--- a/roles/catalogue/common/tasks/systemd_setup.yml
+++ b/roles/catalogue/common/tasks/systemd_setup.yml
@@ -2,3 +2,12 @@
   ansible.builtin.template:
     src: "{{component}}.service"
     dest: /etc/systemd/system/{{component}}.service
+
+- name: Start {{ component }} service
+  ansible:builtin:systemd:
+    name: "{{ component }}"
+    state: restarted
+    enabled: true
+    daemon _reloaded: true
+
+
