--- a/roles/catalogue/templates/catalogue.service
+++ b/roles/catalogue/templates/catalogue.service
@@ -2,8 +2,8 @@
 Description = Catalogue Service
 [Service]
 User=roboshop
-Environment=MONGO=true
-Environment=MONGO_URL="mongodb://mongodb.madhavi91.online:27017/catalogue"
+Environment={{ lookup('aws_ssm', 'dev.catalogue.mongo', region='us-east-1' ) }}
+Environment=MONGO_URL={{ lookup('aws_ssm', 'catalogue.mongo_url', region='us-east-1' ) }}
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=catalogue
 [Install]
