--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -15,10 +15,10 @@
   args:
      chdir: /app
 
-- name: include schema setup
+- name: Include schema setup
   ansible.builtin.import_tasks:
     file: schema_setup.yml
 
-- name: include SystemD
+- name: Include SystemD
   ansible.builtin.import_tasks:
     file: systemd_setup.yml
