--- a/roles/common/tasks/schema_setup.yml
+++ b/roles/common/tasks/schema_setup.yml
@@ -13,4 +13,12 @@
    - name: Load Schema
      ansible.builtin.shell: mongo --host {{ lookup('aws_ssm', 'catalogue.mongo_endpoint', region='us-east-1' ) }} </app/schema/{{component}}.js
 
+- name: Load MongoDB Schema
+  when: schema_setup == "mysql"
+  block:
+    - name: Install Mysql Client
+      ansible.builtin.yum:
+        name: mysql
+    - name: Load Schema
+      ansible.builtin.shell: mysql -h {{ lookup('aws_ssm, 'dev.shipping.db_host', region='us-east-1' ) }} -u{{ lookupo('aws_ssm', 'dev.shipping.db_user', region=us-east-1 ) }} -p{{ lookup('aws_ssm', 'dev.shipping.db_pass',region='us-east-1' ) }} < /app/schema/{{component}}.sql
 
