--- a/roles/shipping/tasks/main.yml
+++ b/roles/shipping/tasks/main.yml
@@ -1,3 +1,4 @@
-- name: Demo
-  ansible.builtin.debug:
-    msg: Component - Shipping
+- name: Import Common java
+  ansible.builtin.import_role:
+  name: common
+  tasks_from: java
