--- a/roles/common/tasks/systemd_setup.yml
+++ b/roles/common/tasks/systemd_setup.yml
@@ -1,13 +1,13 @@
 - name: Setup SystemD Service file
   ansible.builtin.template:
-    src: "{{ component }}.service"
-    dest: /etc/systemd/system/{{component}}.service
+    src: "{{component}}.service"
+    dest: /etc/systemd/system/{{ component }}.service
 
-- name: Start "{{ component }}.service"
+- name: Start {{ component }} service
   ansible:builtin:systemd:
     name: "{{ component }}"
     state: restarted
     enabled: true
-    daemon _reloaded: true
+    daemon _reload: true
 
 
