--- a/roles/frontend/files/roboshop.conf
+++ b/roles/frontend/files/roboshop.conf
@@ -4,11 +4,11 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://catalogue.madhavi91.online:8080/; }
-location /api/user/ { proxy_pass http://user.madhavi91.online:8080/; }
-location /api/cart/ { proxy_pass http://cart.madhavi91.online:8080/; }
- location /api/shipping/ { proxy_pass http://shipping.madhavi91.online:8080/; }
-  location /api/payment/ { proxy_pass http://payment.madhavi91.online:8080/; }
+location /api/catalogue/ { proxy_pass http://dev-catalogue.madhavi91.online:8080/; }
+location /api/user/ { proxy_pass http://dev-user.madhavi91.online:8080/; }
+location /api/cart/ { proxy_pass http://dev-cart.madhavi91.online:8080/; }
+ location /api/shipping/ { proxy_pass http://dev-shipping.madhavi91.online:8080/; }
+  location /api/payment/ { proxy_pass http://dev-payment.madhavi91.online:8080/; }
    location /health {
      stub_status on;
      access_log off;
