--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -30,3 +30,8 @@
     name: Nginx
     enabled: true
 
+- name: Import Filebeat
+  ansible.builtin.import_role:
+  name: elk
+  tasks_from: filebeat
+
