--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -3,7 +3,11 @@ input {
     port => 5044
   }
 }
-
+filter {
+  grok {
+    match => { "message" => "" }
+  }
+}
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
